2021-12-31 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Improve error message during config parsing (closes: #119)

2021-12-05 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add 'database_in' examples to manual page (closes: #31)
	* Enable dynamic linking by default (closes: #94,  #96, #109)

2021-12-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix autoconf warnings

2021-12-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove re-introduced bashism in configure.ac

2021-12-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Switch from PCRE to PCRE2 (closes: #116)

2021-11-14 Jason Pyeron <jpyeron@pdinc.us>
	* Add missing config.h include (closes: #104)

2021-11-07 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove bashism in configure.ac

2021-11-05 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Disable MD5 hashsum if in libgcrypt FIPS mode (closes: #110)

2021-11-04 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Don't fail on missing new line at end of config file (closes: #108)

2021-10-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Support CRLF line-endings in config files (closes: #107)

2021-06-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix handling of --without-posix-acl configure option,
	  thanks to Ilya Tumaykin for the patch
	* Mention removal of -r, --report command line option in man page

2021-06-05 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Only use the return value of time function

2021-05-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix type of database file pointer (closes: #98)

2021-05-01	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Document how to ignore read-only ext2 file attributes (closes: #47)
	* Add @@if macro
	  - deprecate '@@ifdef', use '@@if defined' instead
	  - deprecate '@@ifndef', use '@@if not defined' instead
	  - deprecate '@@ifhost', use '@@if hostame' instead
	  - deprecate '@@ifnhost', use '@@if not hostname' instead
	* Add 'exists' boolean function (closes: #87)
